--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ td {
   padding: 3px 3px 0 3px;
   width: 94px;
   height: 94;
+  z-index: -2;
 }
 
 .number, .move {
@@ -48,4 +49,36 @@ img {
   font-size: 10pt;
   clear: both;
   margin-top: -10pt;
+}
+
+.weeknum-0 {
+  background-color: #555;
+}
+
+.weeknum-1 {
+  background-color: #666;
+}
+
+.weeknum-2 {
+  background-color: #777;
+}
+
+.weeknum-3 {
+  background-color: #888;
+}
+
+.weeknum-4 {
+  background-color: #999;
+}
+
+.weeknum-5 {
+  background-color: #aaa;
+}
+
+.weeknum-6 {
+  background-color: #bbb;
+}
+
+.hi {
+  background-color: #333;
 }
