--- a/style.css
+++ b/style.css
@@ -52,15 +52,15 @@ img {
 }
 
 .weeknum-0 {
-  background-color: #555;
+  background-color: #222;
 }
 
 .weeknum-1 {
-  background-color: #666;
+  background-color: #444;
 }
 
 .weeknum-2 {
-  background-color: #777;
+  background-color: #666;
 }
 
 .weeknum-3 {
@@ -68,17 +68,17 @@ img {
 }
 
 .weeknum-4 {
-  background-color: #999;
-}
-
-.weeknum-5 {
   background-color: #aaa;
 }
 
+.weeknum-5 {
+  background-color: #ccc;
+}
+
 .weeknum-6 {
-  background-color: #bbb;
+  background-color: #eee;
 }
 
 .hi {
-  background-color: #333;
+  background-color: #6495ED;
 }
